# lebesgue-universal-cover-new-lower-bound-certificate

./: .gitignore  CITATION.cff  README.md  README.zh-CN.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt
certificate/: MANIFEST.json  SHA256SUMS.txt
certificate/manifest/: CHECKSUM.md  final_certificate_manifest.json  final_certificate_sha256sums.txt  key_artifacts_sha256.txt
certificate/public/: CERTIFICATE_FINAL.md  CERTIFICATE_INDEX.md  CERTIFICATE_STATUS.md  CLAIM_BOUNDARY.md  PROOF_BOUNDARY.md  RELEASE_NOTES.md  REPLAY_COMMANDS.md  THEOREM_READY_SUMMARY.md
docs/: artifact_policy.md  artifact_structure.md  claim_scope.md  data_dictionary.md  expected_outputs.md  faq.md  release_audit.md  reproducibility.md  reviewer_checklist.md  verification_design.md
paper/source/: macros.tex  main.tex
scripts/: _bootstrap.py  check_repository.py  replay_certificate_chain.py  replay_construction_audit.py  replay_final_adjudication.py  replay_per_record_evidence.py  replay_witness_construction.py  verify_certificate.py
tests/: test_archive_public_mirror.py  test_certificate_counts_match_paper_tables.py  test_loguru_logging.py  test_paper_claim_boundary.py  test_readme_command_examples.py  test_release_version_consistency.py
ucbs/: __init__.py
ucbs/certificate/: __init__.py  archive_io.py  chain_replay.py  construction_audit.py  final_adjudication.py  per_record_evidence.py  validation.py  witness_construction.py
ucbs/cli/: check_repository.py  common.py  component_runner.py  logging.py  replay_certificate_chain.py  replay_construction_audit.py  (+4 more)
(+29 files in other folders)
