[project]
name = "lebesgue-universal-cover-new-lower-bound-certificate"
version = "0.14.4"
description = "Finite certificate package for a certified lower bound in the convex Brass-Sharifi certificate setting."
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ucbs*"]
